--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "blockly": "3.20191014.1"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.4",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "copy-webpack-plugin": "^5.0.3"
+    "webpack-cli": "^3.3.9"
   }
 }
