--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,7 @@
     "compilerOptions": {
         "sourceMap": true,
         "target": "es5",
-        "module": "esnext",
-        "moduleResolution": "node",
-        "importHelpers": true,
-        "lib": [
-            "es2018",
-            "dom"
-          ]
+        "module": "es2015",
+        "moduleResolution": "node"
     }
 }
