--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/mitoma/kintone-blockly#readme",
   "dependencies": {
-    "blockly": "3.20191014.1"
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "blockly": "3.20191014.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.4",
