--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,11 @@
         "sourceMap": true,
         "target": "es5",
         "module": "es2015",
-        "moduleResolution": "node"
+        "jsx": "react",
+        "moduleResolution": "node",
+        "lib": [
+            "es2019",
+            "dom"
+        ]
     }
 }
