--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
     "raw-loader": "^3.1.0",
+    "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
