--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.11.0"
   },
   "devDependencies": {
+    "@kintone/dts-gen": "^2.1.1",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "raw-loader": "^3.1.0",
