--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
-    "blockly": "3.20191014.1",
+    "blockly": "^3.20191014.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
