--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/prettier": "^1.18.3",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "blockly": "^3.20191014.4",
+    "prettier": "^1.18.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   },
