--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "build-production": "webpack --mode production",
     "watch": "webpack -w",
     "clean": "rimraf build",
     "fmt": "prettier --write **/*.{js,jsx,ts,tsx,json,css,html}"
