依存に jest 関係のライブラリを追加

--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
   },
   "devDependencies": {
     "@kintone/dts-gen": "^2.1.1",
+    "@types/jest": "^24.0.23",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
+    "jest": "^24.9.0",
     "raw-loader": "^3.1.0",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
