chrome-extension で動かすようにした

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@kintone/dts-gen": "^2.1.1",
+    "@types/chrome": "0.0.91",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "raw-loader": "^3.1.0",
