--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,5 +15,5 @@
       "run_at": "document_end"
     }
   ],
-  "web_accessible_resources": ["kintone-blockly.js"]
+  "web_accessible_resources": ["kintone-blockly.js", "media/*"]
 }
