--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "kintone blockly",
+  "name": "KanariIi",
   "description": "kintone customize editor",
   "version": "$VERSION",
   "content_scripts": [
