--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "webpack -w",
     "package": "npm run clean && npm run build:production && mkdirp package && zip -r package/kanariii.zip build/*",
     "clean": "rimraf build package",
+    "test": "jest",
     "fmt": "prettier --write **/*.{js,jsx,ts,tsx,json,css,html}"
   },
   "repository": {
