--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm ci
+        npm test
         npm run package --if-present
       env:
         CI: true
