--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/mitoma/kanariii#readme",
   "dependencies": {
+    "@kintone/rest-api-client": "^0.1.0",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@types/prettier": "^1.19.0",
