--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/mitoma/kanariii#readme",
   "dependencies": {
+    "@kintone/rest-api-client": "^1.3.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@types/prettier": "^1.19.1",
@@ -45,12 +46,12 @@
     "@types/jest": "^24.9.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
-    "jest": "^24.9.0",
+    "jest": "^26.0.1",
     "mkdirp": "^0.5.1",
     "raw-loader": "^3.1.0",
     "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
-    "ts-jest": "^24.3.0",
+    "ts-jest": "^26.1.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
